@@ -41,6 +41,8 @@ logmessage.empty=No log message entered
 filter.text=Filter extensions
 filter.button.text=Apply
 listfiles.link.tooltip=Show\\u00a0/\\u00a0hide\\u00a0directory\\u00a0contents
+force-display.button.text=Force display
+showarchivefile.button.text=Show archive contents
 
 diff.error.no-history=The entry does not have a history in current branch.
 diff.error.identical=Files are identical.
