@@ -1,6 +1,7 @@
 sventon change history
 -----------------------------------------------------------------------------------------
 
+[891] Added: Feature #3767 - Show content of files inside archives.
 [874] Added: Feature #1571 - Browse specific date instead of revision.
 [860] Added: Feature #953 - Blame.
 [859] Added: Upgraded to SVNKit 1.1.4.
